business problem and eda added to final notebook

--- a/notebooks/Final Notebook.ipynb
+++ b/notebooks/Final Notebook.ipynb
@@ -41,13 +41,22 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "There are about a million adults in the US that have to be admitted to the hospital for pneumonia. Of those, 50,000 may die in year. One of the tests medical professionals can conduct to test for pneumonia is a chest x-ray scan. By creating a classification model that can predict if a x-ray indicates pneumonia or not, we can help medical professionals make a diagnosis for the patient faster and get to treatment more quickly, thus possibly saving lives."
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## EDA"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The images from the dataset were split into a training set, a validation set, and a test set. In our training set, there is a large class imbalance with 1342 `normal` x-ray images and 3876 x-ray images with `pnuemonia`. The validation set has no class imbalance with 8 `normal` x-ray images and 8 x-ray images with `pnuemonia`. The test set has a small imbalance with 234 `normal` x-ray images and 390 x-ray images with `pnuemonia`."
    ]
   },
   {
@@ -91,6 +100,13 @@
     "    ax[i].set_title('Set: {}, Condition: Normal'.format(_set))\n",
     "    ax[i+3].imshow(plt.imread(set_path+'/PNEUMONIA/'+os.listdir(set_path+'/PNEUMONIA')[0]), cmap='gray')\n",
     "    ax[i+3].set_title('Set: {}, Condition: Pneumonia'.format(_set))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Visualizing one image from each class and set. From the images, we can tell there is a difference between the `normal` and `pnuemonia` x-ray images. The `pnuemonia` images are generally fuzzy or less clear in the lung regions. When radiologists look at chest x-ray image, one of the indicators of `pnuemonia` that they look for is the \"ground-glass opacities\". It describes the different shades of grey that can be found in between an normal chest x-ray and a chest x-ray of a patient with pnuemonia. As in the cases above, the `normal` images show clear lungs while in the `pnuemonia` images, there is an opacity in certain areas of the lung. We want to try to build a model that will be able to classify the images based on this opacity."
    ]
   },
   {
