--- a/notebooks/MalcolmScratch.ipynb
+++ b/notebooks/MalcolmScratch.ipynb
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -193,45 +193,45 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/20\n",
-      "163/163 [==============================] - 8s 47ms/step - loss: 0.3386 - acc: 0.8526 - val_loss: 0.4747 - val_acc: 0.8000\n",
+      "163/163 [==============================] - 8s 51ms/step - loss: 0.3456 - acc: 0.8516 - val_loss: 0.6331 - val_acc: 0.7333\n",
       "Epoch 2/20\n",
-      "163/163 [==============================] - 8s 49ms/step - loss: 0.1335 - acc: 0.9482 - val_loss: 0.5604 - val_acc: 0.8000\n",
+      "163/163 [==============================] - 8s 52ms/step - loss: 0.1454 - acc: 0.9429 - val_loss: 0.4860 - val_acc: 0.6667\n",
       "Epoch 3/20\n",
-      "163/163 [==============================] - 8s 49ms/step - loss: 0.1004 - acc: 0.9622 - val_loss: 0.3416 - val_acc: 0.8000\n",
+      "163/163 [==============================] - 9s 53ms/step - loss: 0.1002 - acc: 0.9617 - val_loss: 0.2410 - val_acc: 0.9333\n",
       "Epoch 4/20\n",
-      "163/163 [==============================] - 7s 45ms/step - loss: 0.0875 - acc: 0.9663 - val_loss: 0.4792 - val_acc: 0.7333\n",
+      "163/163 [==============================] - 9s 56ms/step - loss: 0.1047 - acc: 0.9599 - val_loss: 0.1907 - val_acc: 0.9333\n",
       "Epoch 5/20\n",
-      "163/163 [==============================] - 7s 46ms/step - loss: 0.0666 - acc: 0.9739 - val_loss: 0.8892 - val_acc: 0.6667\n",
+      "163/163 [==============================] - 9s 53ms/step - loss: 0.0764 - acc: 0.9718 - val_loss: 0.3085 - val_acc: 0.8000\n",
       "Epoch 6/20\n",
-      "163/163 [==============================] - 7s 46ms/step - loss: 0.0718 - acc: 0.9739 - val_loss: 0.2787 - val_acc: 0.8667\n",
+      "163/163 [==============================] - 9s 56ms/step - loss: 0.0745 - acc: 0.9689 - val_loss: 0.3082 - val_acc: 0.8667\n",
       "Epoch 7/20\n",
-      "163/163 [==============================] - 8s 52ms/step - loss: 0.0604 - acc: 0.9770 - val_loss: 0.1595 - val_acc: 0.8667\n",
+      "163/163 [==============================] - 9s 58ms/step - loss: 0.0709 - acc: 0.9732 - val_loss: 0.2814 - val_acc: 0.8667\n",
       "Epoch 8/20\n",
-      "163/163 [==============================] - 8s 50ms/step - loss: 0.0543 - acc: 0.9778 - val_loss: 0.1205 - val_acc: 1.0000\n",
+      "163/163 [==============================] - 9s 56ms/step - loss: 0.0531 - acc: 0.9797 - val_loss: 0.0907 - val_acc: 1.0000\n",
       "Epoch 9/20\n",
-      "163/163 [==============================] - 8s 50ms/step - loss: 0.0501 - acc: 0.9824 - val_loss: 0.1371 - val_acc: 0.9333\n",
+      "163/163 [==============================] - 9s 55ms/step - loss: 0.0532 - acc: 0.9810 - val_loss: 0.3188 - val_acc: 0.8000\n",
       "Epoch 10/20\n",
-      "163/163 [==============================] - 8s 47ms/step - loss: 0.0363 - acc: 0.9877 - val_loss: 0.4473 - val_acc: 0.8000\n",
+      "163/163 [==============================] - 9s 58ms/step - loss: 0.0444 - acc: 0.9835 - val_loss: 0.9213 - val_acc: 0.7333\n",
       "Epoch 11/20\n",
-      "163/163 [==============================] - 8s 47ms/step - loss: 0.0287 - acc: 0.9900 - val_loss: 0.2027 - val_acc: 0.9333\n",
+      "163/163 [==============================] - 9s 58ms/step - loss: 0.0377 - acc: 0.9858 - val_loss: 0.2652 - val_acc: 0.8667\n",
       "Epoch 12/20\n",
-      "163/163 [==============================] - 8s 47ms/step - loss: 0.0232 - acc: 0.9921 - val_loss: 0.3244 - val_acc: 0.8000\n",
+      "163/163 [==============================] - 9s 55ms/step - loss: 0.0403 - acc: 0.9837 - val_loss: 0.1277 - val_acc: 0.9333\n",
       "Epoch 13/20\n",
-      "163/163 [==============================] - 8s 49ms/step - loss: 0.0202 - acc: 0.9927 - val_loss: 0.3165 - val_acc: 0.8000\n",
+      "163/163 [==============================] - 9s 56ms/step - loss: 0.0280 - acc: 0.9893 - val_loss: 0.0639 - val_acc: 1.0000\n",
       "Epoch 14/20\n",
-      "163/163 [==============================] - 8s 47ms/step - loss: 0.0171 - acc: 0.9942 - val_loss: 0.3615 - val_acc: 0.7333\n",
+      "163/163 [==============================] - 10s 59ms/step - loss: 0.0262 - acc: 0.9902 - val_loss: 0.1452 - val_acc: 0.9333\n",
       "Epoch 15/20\n",
-      "163/163 [==============================] - 8s 52ms/step - loss: 0.0101 - acc: 0.9962 - val_loss: 0.2505 - val_acc: 0.9333\n",
+      "163/163 [==============================] - 10s 60ms/step - loss: 0.0150 - acc: 0.9952 - val_loss: 0.3302 - val_acc: 0.8667\n",
       "Epoch 16/20\n",
-      "163/163 [==============================] - 8s 48ms/step - loss: 0.0121 - acc: 0.9958 - val_loss: 0.1298 - val_acc: 0.9333\n",
+      "163/163 [==============================] - 10s 60ms/step - loss: 0.0188 - acc: 0.9918 - val_loss: 0.1830 - val_acc: 0.8667\n",
       "Epoch 17/20\n",
-      "163/163 [==============================] - 8s 50ms/step - loss: 0.0085 - acc: 0.9969 - val_loss: 0.9814 - val_acc: 0.7333\n",
+      "163/163 [==============================] - 9s 56ms/step - loss: 0.0092 - acc: 0.9981 - val_loss: 0.1817 - val_acc: 0.9333\n",
       "Epoch 18/20\n",
-      "163/163 [==============================] - 8s 50ms/step - loss: 0.0086 - acc: 0.9973 - val_loss: 0.5348 - val_acc: 0.7333\n",
+      "163/163 [==============================] - 9s 58ms/step - loss: 0.0057 - acc: 0.9983 - val_loss: 0.8674 - val_acc: 0.8000\n",
       "Epoch 19/20\n",
-      "163/163 [==============================] - 8s 51ms/step - loss: 0.0158 - acc: 0.9933 - val_loss: 0.0289 - val_acc: 1.0000\n",
+      "163/163 [==============================] - 9s 58ms/step - loss: 0.0133 - acc: 0.9952 - val_loss: 0.0975 - val_acc: 0.9333\n",
       "Epoch 20/20\n",
-      "163/163 [==============================] - 8s 51ms/step - loss: 0.0059 - acc: 0.9983 - val_loss: 0.1171 - val_acc: 0.9333\n"
+      "163/163 [==============================] - 9s 56ms/step - loss: 0.0128 - acc: 0.9956 - val_loss: 0.0174 - val_acc: 1.0000\n"
      ]
     }
    ],
@@ -245,14 +245,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "163/163 [==============================] - 2s 15ms/step - loss: 0.0044 - acc: 0.9988\n"
+      "163/163 [==============================] - 2s 14ms/step - loss: 0.0054 - acc: 0.9988\n"
      ]
     }
    ],
@@ -262,14 +262,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 1ms/step - loss: 0.1171 - acc: 0.9333\n"
+      "1/1 [==============================] - 0s 845us/step - loss: 0.0667 - acc: 1.0000\n"
      ]
     }
    ],
@@ -279,14 +279,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "20/20 [==============================] - 0s 14ms/step - loss: 2.0078 - acc: 0.7913\n"
+      "20/20 [==============================] - 0s 12ms/step - loss: 1.8723 - acc: 0.7624\n"
      ]
     }
    ],
