added modeling section to final notebook

--- a/notebooks/Final Notebook.ipynb
+++ b/notebooks/Final Notebook.ipynb
@@ -117,6 +117,152 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Import Necessary Libraries and Modules"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from keras.preprocessing.image import load_img, ImageDataGenerator\n",
+    "from keras import models, Input, Model\n",
+    "from keras.layers import Dense, Dropout, Flatten, Conv2D, MaxPooling2D, BatchNormalization, SeparableConv2D, Activation\n",
+    "from keras.optimizers import Adam\n",
+    "from keras.metrics import Recall, Precision, AUC\n",
+    "from keras.callbacks import ModelCheckpoint, ReduceLROnPlateau, EarlyStopping\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Import Data and Create Training, Validation, and Test Groups"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Instantiate a Keras Image Data Generator. Pixel Intensity is between 0 and 255, thus we rescale \n",
+    "# to normalize pixel intensity\n",
+    "datagen = ImageDataGenerator(rescale = 1./255)\n",
+    "# Import a train group. There are normal and pnuemonia images, thus class_mode is binary. We resize the images\n",
+    "# to one specific size by setting the target size to 64 pixels by 64 pixels. The batch size is the total image \n",
+    "# number.\n",
+    "train_it = datagen.flow_from_directory('../data/train/',\n",
+    "                                       class_mode='binary',\n",
+    "                                       target_size = (64,64),\n",
+    "                                       batch_size = 5132)\n",
+    "# Repeat of above, but importing the validation group\n",
+    "val_it = datagen.flow_from_directory('../data/val/',\n",
+    "                                     class_mode='binary',\n",
+    "                                     target_size = (64,64),\n",
+    "                                     batch_size = 100)\n",
+    "# Repeat of above, but importing the test group\n",
+    "test_it = datagen.flow_from_directory('../data/test/',\n",
+    "                                      class_mode='binary', \n",
+    "                                      target_size = (64,64),\n",
+    "                                      batch_size = 624)\n",
+    "# Split the groups into images (X) and class (Y)\n",
+    "X_train, Y_train = train_it.next()\n",
+    "X_val, Y_val = val_it.next()\n",
+    "X_test, Y_test = test_it.next()\n",
+    "\n",
+    "# Our model has an single output, so we reshape the Y values into a single column\n",
+    "Y_train = Y_train.reshape(5132,1)\n",
+    "Y_val = Y_val.reshape(100,1)\n",
+    "Y_test = Y_test.reshape(624,1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Final Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Our final model uses a convolutional neural net (CNN). In the context of image classification, CNN tend to perform better. The final model has 3 2D neural nets and 1 dense with a `relu` activation. The output layer is a single dense binary output with a `sigmoid` activation. For model diagnostics, we measured accuracy, precision, recall, and the AUC score. Due to the medical application of this model, the most important metric is the recall, because we want to minimize false negatives (we would rather predict a healthy patient has pneumonia than predict someone with pneumonia as healthy)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Instantiate sequential neural net\n",
+    "model = models.Sequential()\n",
+    "\n",
+    "# first layer - convolutional 2d NN with relu activation, 3x3 kernal size, drops out 20% of neural nodes to \n",
+    "# combat over-fitting\n",
+    "model.add(Conv2D(32, (3, 3), activation='relu', input_shape=(64 ,64,  3)))\n",
+    "model.add(MaxPooling2D((2, 2)))\n",
+    "model.add(Dropout(0.2))\n",
+    "\n",
+    "# second layer - convolutional 2d NN with relu activation, 4x4 kernal size, drops out 20% of neural nodes to \n",
+    "# combat over-fitting\n",
+    "model.add(Conv2D(64, (4, 4), activation='relu'))\n",
+    "model.add(MaxPooling2D((2, 2)))\n",
+    "model.add(Dropout(0.2))\n",
+    "\n",
+    "# third layer - convolutional 2d NN with relu activation, 3x3 kernal size, drops out 20% of neural nodes to \n",
+    "# combat over-fitting\n",
+    "model.add(Conv2D(128, (3, 3), activation='relu'))\n",
+    "model.add(MaxPooling2D((2, 2)))\n",
+    "model.add(Dropout(0.2))\n",
+    "\n",
+    "# flattens the 2D input into a 1D input for the dense layer\n",
+    "model.add(Flatten())\n",
+    "\n",
+    "# fourth layer - dense layer with relu activation, drops out 20% of neural nodes to combat over-fitting\n",
+    "model.add(Dense(64, activation='relu'))\n",
+    "model.add(Dropout(0.2))\n",
+    "\n",
+    "# output layer\n",
+    "model.add(Dense(1, activation='sigmoid'))\n",
+    "\n",
+    "# compiled with adaptive moment estimation (adam), with binary cross-entropy loss function\n",
+    "model.compile(optimizer='adam',\n",
+    "              loss='binary_crossentropy',\n",
+    "              metrics=['acc', Precision(), Recall(), AUC()])\n",
+    "\n",
+    "# Fit model with training group and validation group\n",
+    "history = model.fit(X_train,\n",
+    "                    Y_train,\n",
+    "                    epochs=5,\n",
+    "                    batch_size = 32,\n",
+    "                    validation_data=(X_val, Y_val))\n",
+    "\n",
+    "# Evaaluate model using test group\n",
+    "score = model.evaluate(X_test, Y_test, verbose=0)\n",
+    "\n",
+    "print('Test loss:', score[0])\n",
+    "print('Test accuracy:', score[1])\n",
+    "print('Test precision:', score[2])\n",
+    "print('Test recall:', score[3])\n",
+    "print('Test AUC:', score[4])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Results"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -127,7 +273,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Results"
+    "## Future Steps"
    ]
   },
   {
