--- a/notebooks/Final Notebook.ipynb
+++ b/notebooks/Final Notebook.ipynb
@@ -34,7 +34,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## EDA"
+    "## Exploratory Data Analysis"
    ]
   },
   {
@@ -377,13 +377,6 @@
     "\n",
     "Additionally, this model downscales images to 64 x 64 pixels, reducing the amount of detail in an image to increase computation speed.  A model that trains on higher resolution images will potentially see features that require more definition.  "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
